apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@subscriptions.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.subscriptions
  data:
    datapoints:
      - value: 1
        attributes:
          opt.deduplication: false
          opt.max_opened: true
          opt.mode.callback: true
          opt.mode.passthrough: true
          opt.queue_capacity: true
          opt.reconnect: 5
