apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@tls.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.tls
  data:
    datapoints:
      - value: 1
        attributes:
          opt.router.tls.server.: true
          opt.router.tls.subgraph.ca_override.: true
          opt.router.tls.subgraph.client_authentication.: true

