apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@traffic_shaping_no_rate_limit.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.experimental_http2
  data:
    datapoints:
      - value: 1
        attributes: {}
- name: apollo.router.config.traffic_shaping
  data:
    datapoints:
      - value: 1
        attributes:
          opt.router.rate_limit: false
          opt.router.rate_limit.capacity: false
          opt.router.rate_limit.interval: false
          opt.router.timeout: true
          opt.subgraph.compression: true
          opt.subgraph.deduplicate_query: true
          opt.subgraph.http2: true
          opt.subgraph.rate_limit: false
          opt.subgraph.rate_limit.capacity: false
          opt.subgraph.rate_limit.interval: false
          opt.subgraph.timeout: true
