apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@wasm.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.wasm
  data:
    datapoints:
      - value: 1
        attributes: {}
